Fixed nav bar background color on mobile

--- a/_sass/components/nav.sass
+++ b/_sass/components/nav.sass
@@ -62,5 +62,5 @@ $nav-padding: 1px 0
 
                     &.active // Ensure active styles apply on mobile as well
                         color: $nav-active-color
-                        background-color: $nav-active-background
+                        background-color: $background-color
                         border-radius: 3px // Adjusted for smaller size
